# filtragem-espacial

./: README.md  analise_filtros_grupos.ipynb  main.py  pyproject.toml
data/input/: Noise_1.tif  Noise_10.tif  Noise_2.tif  Noise_3.tif  Noise_4.tif  Noise_5.tif  Noise_6.tif  Noise_7.tif  Noise_8.tif  Noise_9.tif  Referencia.tif
data/output/filtered_images/gaussian_blur/: Noise_10_filtered.tif  Noise_1_filtered.tif  Noise_2_filtered.tif  Noise_3_filtered.tif  Noise_4_filtered.tif  Noise_5_filtered.tif  Noise_6_filtered.tif  Noise_7_filtered.tif  Noise_8_filtered.tif  Noise_9_filtered.tif
data/output/filtered_images/ibsf/: Noise_10_filtered.tif  Noise_1_filtered.tif  Noise_2_filtered.tif  Noise_3_filtered.tif  Noise_4_filtered.tif  Noise_5_filtered.tif  Noise_6_filtered.tif  Noise_7_filtered.tif  Noise_8_filtered.tif  Noise_9_filtered.tif
data/output/filtered_images/median/: Noise_10_filtered.tif  Noise_1_filtered.tif  Noise_2_filtered.tif  Noise_3_filtered.tif  Noise_4_filtered.tif  Noise_5_filtered.tif  Noise_6_filtered.tif  Noise_7_filtered.tif  (+2 more)
data/output/table/: tabela_gaussian_blur.csv  tabela_gaussian_blur.xlsx  tabela_ibsf.csv  tabela_ibsf.xlsx  tabela_median.csv  tabela_median.xlsx  tabela_moving_average.csv  tabela_moving_average.xlsx  tabela_wiener.csv  tabela_wiener.xlsx
src/: __init__.py
src/filters/: __init__.py  gaussian_blur.py  ibsf_filter.py  median_filter.py  moving_average.py  wiener_filter.py
src/metrics/: __init__.py  correlation.py  harris_corners.py  rmse.py  snr.py  ssim.py
src/utils/: __init__.py  image_io.py  visualization.py
(+20 files in other folders)
