[project]
name = "filtragem-espacial"
version = "0.1.0"
description = "Sistema de filtragem espacial e avaliação de métricas - ES235"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "scikit-image>=0.21.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tifffile>=2023.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
